Created a README that outlines my lotide project and describes each function. Changed package.json's description slightly

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@goingdust/lotide",
   "version": "1.0.0",
-  "description": "A function libary for Week 1 of LHL WD Bootcamp",
+  "description": "A function libary for Week 1 of Lighthouse Labs WD Bootcamp",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "mocha"
